JDK25対応